--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,8 @@
   --color-red-night: rgb(255, 69, 58);
   --color-teal-night: rgb(100, 210, 255);
   --color-yellow-night: rgb(255, 214, 10);
+
+  --cubic-ease: cubic-bezier(0.165, 0.840, 0.440, 1.000);
 }
 
 * {
@@ -41,7 +43,7 @@
 body {
   height: 100vh;
   background-color: white;
-  transition: background-color 1s cubic-bezier(0.165, 0.840, 0.440, 1.000);
+  transition: background-color 1s var(--cubic-ease);
 }
 
 .night-mode {
@@ -62,7 +64,7 @@ main {
 
 #iphone-shape {
   fill: var(--color-gray-6-day);
-  transition: fill .3s cubic-bezier(0.165, 0.840, 0.440, 1.000);
+  transition: fill .3s var(--cubic-ease)
 }
 
 .night-mode #iphone-shape {
@@ -103,7 +105,7 @@ button {
   justify-content: center;
   transition:
     background-color .3s cubic-bezier(0.165, 0.840, 0.440, 1.000),
-    transform 1s cubic-bezier(0.165, 0.840, 0.440, 1.000);
+    transform 1s var(--cubic-ease)
 }
 
 .night-mode .btn-day-night-mode {
@@ -112,7 +114,7 @@ button {
 }
 
 #icon-day-night-mode-stroke, #icon-day-night-mode-fill {
-  transition: all .3s cubic-bezier(0.165, 0.840, 0.440, 1.000);
+  transition: all .3s var(--cubic-ease)
 }
 
 .night-mode #icon-day-night-mode-stroke {
