--- a/static/style.css
+++ b/static/style.css
@@ -125,3 +125,11 @@ button {
 .night-mode #icon-day-night-mode-fill {
   fill: white;
 }
+
+.btn--siri {
+  position: absolute;
+  width: 50px;
+  height: 130px;
+  right: -30px;
+  top: 180px;
+}
